# llm_midi

./: README.md  pyproject.toml
llm_midi/: src.py
tests/: test_llm_midi.py
