[tool.poetry]
name = "llm_midi"
version = "0.1.0"
description = ""
authors = ["kairm amer <karim.amer.sa@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
mido = "^1.3.2"
anthropic = "^0.34.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
